# Effigy

./: README.md  index.theme  meson.build  meson_options.txt
gtk-3.0/: _colors.scss  _common.scss  _drawing.scss  meson.build
